# snappdf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md
src/snappdf/: __init__.py  core.py
tests/: test_core.py
