[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snappdf"
version = "0.1.0"
description = "A zero-dependency, feature-rich HTML+JS web app that converts photos into a printable A4 PDF with waterfall grid layout, drag-and-drop sorting, per-photo rotation, zoom, page navigator, live preview, and drag-to-reorder page groups."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jefry Pratama" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/snappdf"]
